--- a/src/Components/DonateCards/DonateCards.scss
+++ b/src/Components/DonateCards/DonateCards.scss
@@ -1,6 +1,6 @@
 .card-name {
-  -webkit-writing-mode: vertical-lr;
-  writing-mode: vertical-lr;
+  -webkit-writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
 }
 
 .donate-card:active {
