--- a/src/Components/DonateCards/DonateCards.scss
+++ b/src/Components/DonateCards/DonateCards.scss
@@ -1,6 +1,7 @@
 .card-name {
   -webkit-writing-mode: vertical-rl;
   writing-mode: vertical-rl;
+  // text-orientation: mixed;
 }
 
 .donate-card:active {
