@update: donate card

--- a/src/Components/DonateCards/DonateCards.scss
+++ b/src/Components/DonateCards/DonateCards.scss
@@ -1,7 +1,10 @@
 .card-name {
   -webkit-writing-mode: vertical-rl;
   writing-mode: vertical-rl;
-  // text-orientation: mixed;
+  line-height: 2;
+   @media (max-width: 768px) {
+    line-height: 1.5;
+  }
 }
 
 .donate-card:active {
