@fix: donate card on android and ios

--- a/src/Components/DonateCards/DonateCards.scss
+++ b/src/Components/DonateCards/DonateCards.scss
@@ -3,8 +3,8 @@
   writing-mode: vertical-rl;
 }
 
-.apple-device {
-  .card-name {
+.ios {
+  p {
    line-height: 200px;
 
    @media (max-width: 768px) {
